# learn-opengl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp
src/tests/: Test.h  TestClearColor.cpp  TestClearColor.h
